--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family:"Belair Light";
-    src: url(".assets/fonts/Belair Light.ttf");
+    src: url("./assets/fonts/Belair Light.ttf");
 }
 
 html {
